--- a/libfprint-0.7.0/examples/.deps/verify_live.Po
+++ b/libfprint-0.7.0/examples/.deps/verify_live.Po
@@ -106,7 +106,74 @@ verify_live.o: verify_live.c /usr/include/stdc-predef.h \
  /usr/include/json-c/json_c_version.h /usr/include/string.h \
  /usr/include/strings.h \
  /usr/include/x86_64-linux-gnu/bits/strings_fortified.h \
- /usr/include/x86_64-linux-gnu/bits/string_fortified.h
+ /usr/include/x86_64-linux-gnu/bits/string_fortified.h \
+ /usr/include/pthread.h /usr/include/sched.h \
+ /usr/include/x86_64-linux-gnu/bits/sched.h \
+ /usr/include/x86_64-linux-gnu/bits/cpu-set.h \
+ /usr/include/x86_64-linux-gnu/bits/setjmp.h client.c \
+ /usr/include/libwebsockets.h /usr/include/lws_config.h \
+ /usr/include/poll.h /usr/include/x86_64-linux-gnu/sys/poll.h \
+ /usr/include/x86_64-linux-gnu/bits/poll.h \
+ /usr/include/x86_64-linux-gnu/bits/poll2.h /usr/include/netdb.h \
+ /usr/include/netinet/in.h /usr/include/x86_64-linux-gnu/bits/in.h \
+ /usr/include/rpc/netdb.h /usr/include/x86_64-linux-gnu/bits/netdb.h \
+ /usr/include/ev.h /usr/include/signal.h \
+ /usr/include/x86_64-linux-gnu/bits/signum.h \
+ /usr/include/x86_64-linux-gnu/bits/signum-generic.h \
+ /usr/include/x86_64-linux-gnu/bits/types/sig_atomic_t.h \
+ /usr/include/x86_64-linux-gnu/bits/types/siginfo_t.h \
+ /usr/include/x86_64-linux-gnu/bits/types/__sigval_t.h \
+ /usr/include/x86_64-linux-gnu/bits/siginfo-arch.h \
+ /usr/include/x86_64-linux-gnu/bits/siginfo-consts.h \
+ /usr/include/x86_64-linux-gnu/bits/types/sigval_t.h \
+ /usr/include/x86_64-linux-gnu/bits/types/sigevent_t.h \
+ /usr/include/x86_64-linux-gnu/bits/sigevent-consts.h \
+ /usr/include/x86_64-linux-gnu/bits/sigaction.h \
+ /usr/include/x86_64-linux-gnu/bits/sigcontext.h \
+ /usr/include/x86_64-linux-gnu/bits/types/stack_t.h \
+ /usr/include/x86_64-linux-gnu/sys/ucontext.h \
+ /usr/include/x86_64-linux-gnu/bits/sigstack.h \
+ /usr/include/x86_64-linux-gnu/bits/ss_flags.h \
+ /usr/include/x86_64-linux-gnu/bits/types/struct_sigstack.h \
+ /usr/include/x86_64-linux-gnu/bits/sigthread.h \
+ /usr/include/x86_64-linux-gnu/sys/stat.h \
+ /usr/include/x86_64-linux-gnu/bits/stat.h /usr/include/uv.h \
+ /usr/include/uv-errno.h /usr/include/errno.h \
+ /usr/include/x86_64-linux-gnu/bits/errno.h /usr/include/linux/errno.h \
+ /usr/include/x86_64-linux-gnu/asm/errno.h \
+ /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
+ /usr/include/uv-version.h /usr/include/uv-unix.h /usr/include/fcntl.h \
+ /usr/include/x86_64-linux-gnu/bits/fcntl.h \
+ /usr/include/x86_64-linux-gnu/bits/fcntl-linux.h \
+ /usr/include/x86_64-linux-gnu/bits/fcntl2.h /usr/include/dirent.h \
+ /usr/include/x86_64-linux-gnu/bits/dirent.h /usr/include/netinet/tcp.h \
+ /usr/include/arpa/inet.h /usr/include/termios.h \
+ /usr/include/x86_64-linux-gnu/bits/termios.h \
+ /usr/include/x86_64-linux-gnu/sys/ttydefaults.h /usr/include/pwd.h \
+ /usr/include/semaphore.h /usr/include/x86_64-linux-gnu/bits/semaphore.h \
+ /usr/include/uv-threadpool.h /usr/include/uv-linux.h \
+ /usr/local/include/openssl/ssl.h \
+ /usr/local/include/openssl/opensslconf.h \
+ /usr/local/include/openssl/opensslfeatures.h \
+ /usr/local/include/openssl/hmac.h /usr/local/include/openssl/evp.h \
+ /usr/local/include/openssl/ossl_typ.h /usr/local/include/openssl/bio.h \
+ /usr/local/include/openssl/crypto.h /usr/local/include/openssl/stack.h \
+ /usr/local/include/openssl/safestack.h \
+ /usr/local/include/openssl/opensslv.h \
+ /usr/local/include/openssl/objects.h \
+ /usr/local/include/openssl/obj_mac.h /usr/local/include/openssl/asn1.h \
+ /usr/local/include/openssl/bn.h /usr/local/include/openssl/pem.h \
+ /usr/local/include/openssl/x509.h /usr/local/include/openssl/buffer.h \
+ /usr/local/include/openssl/ec.h /usr/local/include/openssl/ecdsa.h \
+ /usr/local/include/openssl/ecdh.h /usr/local/include/openssl/rsa.h \
+ /usr/local/include/openssl/dsa.h /usr/local/include/openssl/dh.h \
+ /usr/local/include/openssl/sha.h /usr/local/include/openssl/x509_vfy.h \
+ /usr/local/include/openssl/lhash.h /usr/local/include/openssl/pkcs7.h \
+ /usr/local/include/openssl/pem2.h /usr/local/include/openssl/ssl2.h \
+ /usr/local/include/openssl/ssl3.h /usr/local/include/openssl/tls1.h \
+ /usr/local/include/openssl/dtls1.h /usr/local/include/openssl/ssl23.h \
+ /usr/local/include/openssl/srtp.h /usr/local/include/openssl/err.h \
+ server.c
 
 /usr/include/stdc-predef.h:
 
@@ -357,3 +424,207 @@ verify_live.o: verify_live.c /usr/include/stdc-predef.h \
 /usr/include/x86_64-linux-gnu/bits/strings_fortified.h:
 
 /usr/include/x86_64-linux-gnu/bits/string_fortified.h:
+
+/usr/include/pthread.h:
+
+/usr/include/sched.h:
+
+/usr/include/x86_64-linux-gnu/bits/sched.h:
+
+/usr/include/x86_64-linux-gnu/bits/cpu-set.h:
+
+/usr/include/x86_64-linux-gnu/bits/setjmp.h:
+
+client.c:
+
+/usr/include/libwebsockets.h:
+
+/usr/include/lws_config.h:
+
+/usr/include/poll.h:
+
+/usr/include/x86_64-linux-gnu/sys/poll.h:
+
+/usr/include/x86_64-linux-gnu/bits/poll.h:
+
+/usr/include/x86_64-linux-gnu/bits/poll2.h:
+
+/usr/include/netdb.h:
+
+/usr/include/netinet/in.h:
+
+/usr/include/x86_64-linux-gnu/bits/in.h:
+
+/usr/include/rpc/netdb.h:
+
+/usr/include/x86_64-linux-gnu/bits/netdb.h:
+
+/usr/include/ev.h:
+
+/usr/include/signal.h:
+
+/usr/include/x86_64-linux-gnu/bits/signum.h:
+
+/usr/include/x86_64-linux-gnu/bits/signum-generic.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/sig_atomic_t.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/siginfo_t.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/__sigval_t.h:
+
+/usr/include/x86_64-linux-gnu/bits/siginfo-arch.h:
+
+/usr/include/x86_64-linux-gnu/bits/siginfo-consts.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/sigval_t.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/sigevent_t.h:
+
+/usr/include/x86_64-linux-gnu/bits/sigevent-consts.h:
+
+/usr/include/x86_64-linux-gnu/bits/sigaction.h:
+
+/usr/include/x86_64-linux-gnu/bits/sigcontext.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/stack_t.h:
+
+/usr/include/x86_64-linux-gnu/sys/ucontext.h:
+
+/usr/include/x86_64-linux-gnu/bits/sigstack.h:
+
+/usr/include/x86_64-linux-gnu/bits/ss_flags.h:
+
+/usr/include/x86_64-linux-gnu/bits/types/struct_sigstack.h:
+
+/usr/include/x86_64-linux-gnu/bits/sigthread.h:
+
+/usr/include/x86_64-linux-gnu/sys/stat.h:
+
+/usr/include/x86_64-linux-gnu/bits/stat.h:
+
+/usr/include/uv.h:
+
+/usr/include/uv-errno.h:
+
+/usr/include/errno.h:
+
+/usr/include/x86_64-linux-gnu/bits/errno.h:
+
+/usr/include/linux/errno.h:
+
+/usr/include/x86_64-linux-gnu/asm/errno.h:
+
+/usr/include/asm-generic/errno.h:
+
+/usr/include/asm-generic/errno-base.h:
+
+/usr/include/uv-version.h:
+
+/usr/include/uv-unix.h:
+
+/usr/include/fcntl.h:
+
+/usr/include/x86_64-linux-gnu/bits/fcntl.h:
+
+/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:
+
+/usr/include/x86_64-linux-gnu/bits/fcntl2.h:
+
+/usr/include/dirent.h:
+
+/usr/include/x86_64-linux-gnu/bits/dirent.h:
+
+/usr/include/netinet/tcp.h:
+
+/usr/include/arpa/inet.h:
+
+/usr/include/termios.h:
+
+/usr/include/x86_64-linux-gnu/bits/termios.h:
+
+/usr/include/x86_64-linux-gnu/sys/ttydefaults.h:
+
+/usr/include/pwd.h:
+
+/usr/include/semaphore.h:
+
+/usr/include/x86_64-linux-gnu/bits/semaphore.h:
+
+/usr/include/uv-threadpool.h:
+
+/usr/include/uv-linux.h:
+
+/usr/local/include/openssl/ssl.h:
+
+/usr/local/include/openssl/opensslconf.h:
+
+/usr/local/include/openssl/opensslfeatures.h:
+
+/usr/local/include/openssl/hmac.h:
+
+/usr/local/include/openssl/evp.h:
+
+/usr/local/include/openssl/ossl_typ.h:
+
+/usr/local/include/openssl/bio.h:
+
+/usr/local/include/openssl/crypto.h:
+
+/usr/local/include/openssl/stack.h:
+
+/usr/local/include/openssl/safestack.h:
+
+/usr/local/include/openssl/opensslv.h:
+
+/usr/local/include/openssl/objects.h:
+
+/usr/local/include/openssl/obj_mac.h:
+
+/usr/local/include/openssl/asn1.h:
+
+/usr/local/include/openssl/bn.h:
+
+/usr/local/include/openssl/pem.h:
+
+/usr/local/include/openssl/x509.h:
+
+/usr/local/include/openssl/buffer.h:
+
+/usr/local/include/openssl/ec.h:
+
+/usr/local/include/openssl/ecdsa.h:
+
+/usr/local/include/openssl/ecdh.h:
+
+/usr/local/include/openssl/rsa.h:
+
+/usr/local/include/openssl/dsa.h:
+
+/usr/local/include/openssl/dh.h:
+
+/usr/local/include/openssl/sha.h:
+
+/usr/local/include/openssl/x509_vfy.h:
+
+/usr/local/include/openssl/lhash.h:
+
+/usr/local/include/openssl/pkcs7.h:
+
+/usr/local/include/openssl/pem2.h:
+
+/usr/local/include/openssl/ssl2.h:
+
+/usr/local/include/openssl/ssl3.h:
+
+/usr/local/include/openssl/tls1.h:
+
+/usr/local/include/openssl/dtls1.h:
+
+/usr/local/include/openssl/ssl23.h:
+
+/usr/local/include/openssl/srtp.h:
+
+/usr/local/include/openssl/err.h:
+
+server.c:
