--- a/libfprint-0.7.0/examples/.deps/verify_live.Po
+++ b/libfprint-0.7.0/examples/.deps/verify_live.Po
@@ -110,7 +110,7 @@ verify_live.o: verify_live.c /usr/include/stdc-predef.h \
  /usr/include/pthread.h /usr/include/sched.h \
  /usr/include/x86_64-linux-gnu/bits/sched.h \
  /usr/include/x86_64-linux-gnu/bits/cpu-set.h \
- /usr/include/x86_64-linux-gnu/bits/setjmp.h client.c \
+ /usr/include/x86_64-linux-gnu/bits/setjmp.h ws.c \
  /usr/include/libwebsockets.h /usr/include/lws_config.h \
  /usr/include/poll.h /usr/include/x86_64-linux-gnu/sys/poll.h \
  /usr/include/x86_64-linux-gnu/bits/poll.h \
@@ -173,7 +173,7 @@ verify_live.o: verify_live.c /usr/include/stdc-predef.h \
  /usr/local/include/openssl/ssl3.h /usr/local/include/openssl/tls1.h \
  /usr/local/include/openssl/dtls1.h /usr/local/include/openssl/ssl23.h \
  /usr/local/include/openssl/srtp.h /usr/local/include/openssl/err.h \
- server.c
+ cadastro.c ponto.c
 
 /usr/include/stdc-predef.h:
 
@@ -435,7 +435,7 @@ verify_live.o: verify_live.c /usr/include/stdc-predef.h \
 
 /usr/include/x86_64-linux-gnu/bits/setjmp.h:
 
-client.c:
+ws.c:
 
 /usr/include/libwebsockets.h:
 
@@ -627,4 +627,6 @@ client.c:
 
 /usr/local/include/openssl/err.h:
 
-server.c:
+cadastro.c:
+
+ponto.c:
